Adicionado 1 svg e colocando no index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Meu título</h1>
     <p>Bom dia</p>
     <p>ola</p>
-
+    <img src="assets/svgs/icon-user.svg" alt="">    
 </body>
 </html>
